--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,8 @@ default: &default
   username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
   pool: 5
+  port: 5432
+
 
 development:
   <<: *default
