--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,28 @@ services:
   db:
     image: postgres:13
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/ds_data
     environment:
-      POSTGRES_DB: myapp_development
+      POSTGRES_DB: ds_development
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+    ports:
+      - "3002:5432"
 
   web:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -b '0.0.0.0'"
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails server -b 0.0.0.0 -p 3001"
     volumes:
       - .:/app
     ports:
-      - "3000:3000"
+      - "3001:3001"
     depends_on:
       - db
     environment:
       DATABASE_HOST: db
       DATABASE_USERNAME: postgres
       DATABASE_PASSWORD: password
-      DATABASE_NAME: myapp_development
+      DATABASE_NAME: ds_development
 
 volumes:
   postgres_data:
